--- a/literatura/amanhapacifico.tex
+++ b/literatura/amanhapacifico.tex
@@ -1,6 +1,6 @@
 \documentclass{book}
-\usepackage[portuges]{babel}
-\usepackage[utf-8]{inputenc}
+\usepackage[brazilian]{babel}
+\usepackage[utf8]{inputenc}
 
 \title{O pacífico dia de amanhã}
 \begin{document}
